# Recommnder_System

./: .gitignore  Dockerfile  LICENSE  README.md  UAISV_Final_Project_Summary.md  docker-compose.yml  mlflow_config.yaml  pyproject.toml  requirements-optional.txt  requirements.txt  setup.cfg
api/: __init__.py  main.py
config/: base_config.yaml  behavior_config.yaml  cyber_config.yaml  fraud_config.yaml  nlp_config.yaml  vision_config.yaml
configs/: base.yaml  behavior_baseline.yaml  cyber_baseline.yaml  data_behavior.yaml  data_cyber.yaml  data_fraud.yaml  fraud_baseline.yaml  fusion_baseline.yaml  model_30seq.yaml  nlp_baseline.yaml  training_30seq.yaml  vision_baseline.yaml
dashboard/: __init__.py  app_streamlit.py
data/: README.md
docs/: UAISV_technical_brief.md  api_streamlit_notes.md  architecture.md  local_run.md
notebooks/: 00_data_overview.ipynb  01_eda_fraud.ipynb  02_eda_cyber.ipynb  03_eda_behavior.ipynb  03_eda_behavior_cert.ipynb  100_fusion_and_dashboard.ipynb  10_supervised_fraud.ipynb  11_supervised_cyber.ipynb  20_unsupervised_fraud.ipynb  21_unsupervised_cyber.ipynb  22_unsupervised_behavior.ipynb  30_sequence_models.ipynb  40_fusion_model.ipynb  40_hybrid_fraud_score.ipynb  50_explainability.ipynb  60_evaluation_drift.ipynb  70_nlp_email_anomalies.ipynb  80_vision_forgery_detection.ipynb  90_generative_synthesis.ipynb  95_data_quickstart.ipynb  96_reports_preview.ipynb  97_feature_ablation.ipynb  98_task_checklist.ipynb  99_integration_overview.ipynb  Untitled-1.py  hkadh.py
rag/: embed.py
reports/: metrics_behavior.csv  (+4 more)
ui/: app.js  (+1 more)
(+204 files in other folders)
